--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   {% endif %}
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="description" content="{{site.subtitle | replace: "&middot;", "·" }}, {{ site.description | replace: "&middot;", "·" }}, {{site.description2 | replace: "&middot;", "·" }}">
   <meta name="author" content="{{ site.author.name }}">
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
@@ -17,7 +17,7 @@
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
-  <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="twitter:description" content="{{site.subtitle | replace: "&middot;", "·" }}, {{ site.description | replace: "&middot;", "·" }}, {{site.descri    ption2 | replace: "&middot;", "·" }}">
   {% if site.author.twitter_username %}
   <meta name="twitter:creator" content="{{ site.author.twitter_username }}">
   {% endif %}
@@ -25,7 +25,7 @@
 
   <meta property="og:type" content="article">
   <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
-  <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html }}{% else %}{{ site.description }}{% endif %}">
+  <meta property="og:description" content="{{site.subtitle | replace: "&middot;", "·" }}, {{ site.description | replace: "&middot;", "·" }}, {{site.descri    ption2 | replace: "&middot;", "·" }}">
   <meta property="og:image" content="{{ site.baseurl }}/images/favicons/favicon-194x194.png" />
 
   <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/images/favicons/apple-touch-icon-57x57.png">
