--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,8 +18,11 @@
           <h1 class="panel-cover__title panel-title">{{ site.title }}</h1>
         </a>
         <hr class="panel-cover__divider">
+        <p class="panel-cover__subtitle">{{ site.subtitle }}</p>
+		<hr class="panel-cover__divider panel-cover__divider--secondary">
         <p class="panel-cover__description">{{ site.description }}</p>
-        <hr class="panel-cover__divider panel-cover__divider--secondary">
+        <p class="panel-cover__description panel-cover__description--secondary">{{ site.description2 }}</p>
+        <hr class="panel-cover__divider panel-cover__divider--tertiary">
 
         <div class="navigation-wrapper">
 
